testdata/baselines/reference/compiler/taggedTemplateNestedInvalidEscape.errors.txt
error TS2318: Cannot find global type 'TemplateStringsArray'.
taggedTemplateNestedInvalidEscape.tlua(1,32): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateNestedInvalidEscape.tlua(1,57): error TS100034: A vararg parameter cannot have a name.


!!! error TS2318: Cannot find global type 'TemplateStringsArray'.
==== taggedTemplateNestedInvalidEscape.tlua (2 errors) ====
    declare function tag(template: TemplateStringsArray, ...substitutions: any[]): string;
                                   ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
                                                            ~~~~~~~~~~~~~
!!! error TS100034: A vararg parameter cannot have a name.
    
    // The outer tagged template should NOT be rewritten with __makeTemplateObject
    // because only the inner tagged template contains an invalid escape.
    tag`ok ${tag`\u`}`;
    
    // The inner tagged template here has an invalid escape, but the outer one doesn't.
    tag`fine ${tag`\x`} also fine`;
    
    // This one should be rewritten because it has its own invalid escape.
    tag`\u`;
    
    // Nested with substitution, only inner is invalid.
    tag`hello ${tag`\u{}`} world`;
    